2005-04-01  Sven Neumann  <sven@gimp.org>

	* configure.in (ALL_LINGUAS): removed sl until all required files
	have been added to CVS.

2005-03-31  Manish Singh  <yosh@gimp.org>

	* app/dialogs/quit-dialog.c (quit_dialog_new): cast to
	GIMP_CONTAINER_VIEW for gimp_container_view_get_dnd_widget()

2005-03-31  Sven Neumann  <sven@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/gimpfgbgview.[ch]
	* app/widgets/widgets-types.h: added new widget GimpFgBgView;
	somewhat similar to GimpFgBgEditor but a lot simpler.

	* app/widgets/gimpcoloreditor.c: use GimpFgBgView as preview widget.
	Closes bug #168592.

	* app/widgets/gimpfgbgeditor.c: gracefully handle a very small
	size allocation.

2005-03-31  Sven Neumann  <sven@gimp.org>

	* app/dialogs/quit-dialog.c: enable save via DND from the image
	list in the quit dialog.

2005-03-31  Sven Neumann  <sven@gimp.org>

	* app/dialogs/quit-dialog.c: use GTK_STOCK_DELETE for the "Discard
	Changes" button.

2005-03-31  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-close.c
	(gimp_display_shell_close_dialog): use GTK_STOCK_DELETE for the
	"Don't Save" button.

2005-03-30  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpwidgets.c (gimp_label_set_attributes): fixed
	copy-n-paste bug that affected PANGO_ATTR_SIZE.

2005-03-30  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpvectortool.c (gimp_vector_tool_status_update):
	set a different help message in polygonal mode. Fixes bug #172051.

2005-03-30  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpclipboard.c: when GIMP exits and a clipboard
	manager is available, store the clipboard content.

2005-03-28  Sven Neumann  <sven@gimp.org>

	* app/dialogs/resize-dialog.c (resize_dialog_new): handle
	gimp_viewable_get_pixbuf() returning NULL. Fixes bug #171827.

2005-03-26  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.c (script_fu_find_scripts):
	removed menu branch registering here (this function is called on
	each refresh).
