@@ -1,5 +1,10 @@
 2005-04-01  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/rcm/rcm_dialog.c: keep the previews from expanding. Fixes
+	bug #172284.
+
+2005-04-01  Sven Neumann  <sven@gimp.org>
+
 	* configure.in (ALL_LINGUAS): removed sl until all required files
 	have been added to CVS.
 
